force-app/main/default/objects/MidasIntegration__c/MidasIntegration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>MidasIntegration</label>
</CustomObject>