force-app/main/default/objects/MidasIntegration__c/fields/AuthenticationToken__c.field-meta.xml
<CustomField>
    <fullName>AuthenticationToken__c</fullName>
    <label>AuthenticationToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>