force-app/main/default/objects/MidasIntegration__c/fields/CountryBrand__c.field-meta.xml
<CustomField>
    <fullName>CountryBrand__c</fullName>
    <label>CountryBrand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>