force-app/main/default/objects/MidasIntegration__c/fields/SendEmailToOwner__c.field-meta.xml
<CustomField>
    <fullName>SendEmailToOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmailToOwner</label>
    <type>Checkbox</type>
</CustomField>